Fixed some issues with worker being cleaned up and stuck in an incorrect state. Made the loading indicator a little nicer.

--- a/src/app/loadout-builder/LoadoutBuilder.m.scss
+++ b/src/app/loadout-builder/LoadoutBuilder.m.scss
@@ -35,15 +35,24 @@
 }
 
 .processing {
-  background-color: black;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+  top: 50px;
+  z-index: 50;
+}
+
+.processingContents {
+  background-color: #313233;
   border-radius: 5px;
   font-size: 1.4em;
-  height: 30px;
-  position: fixed;
-  right: 10px;
+  padding: 3px 5px;
   text-align: center;
-  top: 50px;
-  vertical-align: middle;
-  width: 30px;
-  z-index: 50;
+
+  span {
+    margin-right: 5px;
+  }
 }
